Fix media queries

--- a/css/main.css
+++ b/css/main.css
@@ -11,24 +11,36 @@ html {
 }
 
 @-moz-viewport {
-
+  -moz-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
 }
 
 @-ms-viewport {
-
+  -moz-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
 }
 
 @-o-viewport {
-
+  -moz-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
 }
 
 @-webkit-viewport {
-
+  -moz-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
 }
 
 @viewport {
-  min-width: 25em;
-  max-width: 90em;
+  max-width: 1440px;
+  min-width: 320px;
 }
 
 body {
@@ -36,18 +48,21 @@ body {
   margin: 0;
 }
 
-.h1 {
-  font-family: sans-serif;
+section {
+  padding: 2rem 0;
 }
 
-.img {
+.h1 {
+  font-family: sans-serif;
   max-width: 50em;
   display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  margin: 0 auto;
 }
 
 .img-flex {
   display: block;
-  flex-wrap: wrap;
   width: 100%;
 }
 
@@ -62,12 +77,19 @@ a {
   background-color: #555;
   border-radius: 4px;
   color: #e2e2e2;
-  padding: 0.75rem;
+  padding: .75rem;
   text-decoration: none;
 }
 
-.a {
+a:hover {
   font-family: sans-serif;
+  background-color: #000;
+}
+
+.u,
+.photo {
+  width: 100%;
+  padding: 1rem;
 }
 
 @media only screen and (min-width: 25em) {
@@ -75,6 +97,11 @@ a {
   html {
     font-size: 100%;
     line-height: 1.3;
+  }
+
+  .u,
+  .photo {
+    width: 100%;
   }
 
 }
@@ -86,6 +113,15 @@ a {
     line-height: 1.4;
   }
 
+  .u,
+  .photo {
+    width: 50%;
+  }
+
+  section {
+    margin-top: -2rem;
+  }
+
 }
 
 @media only screen and (min-width: 60em) {
@@ -95,12 +131,20 @@ a {
     line-height: 1.5;
   }
 
+  section {
+    padding: 3rem 0;
+  }
+
 }
 
 @media only screen and (min-width: 90em) {
 
   html {
     font-size: 130%;
+  }
+
+  section {
+    padding: 3rem 0;
   }
 
 }
